--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ base: https://developer.mozilla.org/en-US/docs/Web/CSS/animation-name
 <!-- CHANGE TO appco_min ABOVE ^ ^ .. make sure all style.css edits are done in this folder, as in lines 86-105 below -->
 
 <style>
-/* THIS IS CODE PERFECTED IN MIVA .. CSS TO BRING IT TO NON-MIVA IS MARKED 'NON-MIVA' IN THE CLASS .this, line 209 */
+/* THIS IS CODE PERFECTED IN MIVA .. CSS TO BRING IT TO NON-MIVA IS MARKED 'NON-MIVA' IN THE CLASS .this (line 209), miva code  starting on line 425 */
 /* h1 override .. from line 4574 .. has to be positioned way up here [ORDER THAT IS] or does not work */
 .slider-area .hero__caption h1 {
   font-size: 45px;
@@ -422,16 +422,7 @@ style="font-size: 50px !important;font-family: Lato, sans-serif;"
                                       <div class="hero__img d-lg-block" data-animation="fadeInRight" data-delay="1s">
                                         <!-- <img src="assets/img/hero/hero_right.png" alt=""> -->
 
-                                        <!-- / / / / / / NAB THIS 1 -->
-                                        <mvt:if expr="NOT ISNULL g.QuoteCode">
-                                          <mvt:assign name="l.settings:url" value="l.settings:urls:QUOT:secure" />
-                                        <mvt:elseif expr="g.Customer_Temporary_Password">
-                                          <mvt:assign name="l.settings:url" value="l.settings:urls:CPWD:secure" />
-                                        <mvt:elseif expr="g.Order">
-                                          <mvt:assign name="l.settings:url" value="l.settings:urls:OINF:secure" />
-                                        <mvt:else>
-                                          <mvt:assign name="l.settings:url" value="l.settings:urls:ACLN:secure" />
-                                        </mvt:if>
+                                        <!-- / / / / / / NAB THIS 1 (miva code removed) -->
                                         <!-- / NAB THIS 1 -->
 
                                         <!-- / / / / / / NAB THIS 2, add method="post" action="&mvte:url;" to bootstrap form .. sean added live URL vs miva logic -->
