--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ base: https://developer.mozilla.org/en-US/docs/Web/CSS/animation-name
 <!-- CHANGE TO appco_min ABOVE ^ ^ .. make sure all style.css edits are done in this folder, as in lines 86-105 below -->
 
 <style>
-/* THIS IS CODE PERFECTED IN MIVA .. CSS TO BRING IT TO NON-MIVA IS MARKED 'NON-MIVA' IN THE CLASS .this (line 209), miva code starting on line 425 was also removed .. find out why stackblitz isn't displaying page outside of editor */
+/* THIS IS CODE PERFECTED IN MIVA .. TO PUT IN ORIGINAL MODE JUST DISABLE LINES 75-85 .. ALTERNATE CSS TO BRING IT TO NON-MIVA IS MARKED 'NON-MIVA' IN THE CLASS .this (line 209), miva code starting on line 425 was also removed .. find out why stackblitz isn't displaying page outside of editor */
 /* h1 override .. from line 4574 .. has to be positioned way up here [ORDER THAT IS] or does not work */
 .slider-area .hero__caption h1 {
   font-size: 45px;
@@ -206,7 +206,7 @@ base: https://developer.mozilla.org/en-US/docs/Web/CSS/animation-name
   /* background-color: #ffc266; */
   width: 100%;
   height: 50%;
-  margin-top:20%; /* MIVA TO NON-MIVA CSS .. was -20% */
+  margin-top:20%; /* ALTERNATE MIVA TO NON-MIVA CSS .. was -20% */
   /* border: 3px solid #ff9933; */
   }
 }
